# whisper_flutter_new

./: .gitignore  pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  whisper_controller.dart
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
ios/: whisper_flutter_new.podspec
ios/Classes/: CMakeLists.txt  whisper_flutter_new.cpp
lib/: download_model.dart  whisper_bindings_generated.dart  whisper_flutter_new.dart
macos/: whisper_flutter_new.podspec
macos/Classes/: CMakeLists.txt  whisper_flutter_new.cpp
macos/Classes/whisper.cpp/examples/: CMakeCache.txt
macos/Classes/whisper.cpp/examples/stream/: CMakeCache.txt  Makefile  cmake_install.cmake
macos/Classes/whisper.cpp/examples/whisper.android.java/gradle/wrapper/: gradle-wrapper.properties
macos/Classes/whisper.cpp/examples/whisper.swiftui/whisper.swiftui.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  main.cpp  main.h
